// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SponsorSubsection/> renders the component <SponsorSubsection /> 1`] = `
<Fragment>
  <styles__TitleWrapper>
    <SponsorStar
      color="#FFE16C"
    />
    <styles__Title>
      Bronze sponsors
    </styles__Title>
  </styles__TitleWrapper>
  <styles__BadgesContainer>
    <SponsorBadge
      key="Sponsor One"
      level="Headline"
      logo="/logo1"
      name="Sponsor One"
      preventLevelSize={false}
      url="https://sponsor1.com"
    />
    <SponsorBadge
      key="Sponsor Two"
      level="Headline"
      logo="/logo2"
      name="Sponsor Two"
      preventLevelSize={false}
      url="https://sponsor2.com"
    />
  </styles__BadgesContainer>
</Fragment>
`;

exports[`<SponsorSubsection/> renders the component <SponsorSubsection /> and prevent level sizes 1`] = `
<Fragment>
  <styles__TitleWrapper>
    <SponsorStar
      color="#FFE16C"
    />
    <styles__Title>
      Bronze sponsors
    </styles__Title>
  </styles__TitleWrapper>
  <styles__BadgesContainer>
    <SponsorBadge
      key="Sponsor One"
      level="Headline"
      logo="/logo1"
      name="Sponsor One"
      preventLevelSize={true}
      url="https://sponsor1.com"
    />
    <SponsorBadge
      key="Sponsor Two"
      level="Headline"
      logo="/logo2"
      name="Sponsor Two"
      preventLevelSize={true}
      url="https://sponsor2.com"
    />
  </styles__BadgesContainer>
</Fragment>
`;
